--- a/package.json
+++ b/package.json
@@ -16,14 +16,10 @@
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
-    "hexo-generator-json-content": "^4.2.3",
-    "hexo-generator-search": "^2.4.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^4.0.0",
-    "hexo-renderer-stylus": "^2.0.1",
-    "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3",
-    "hexo-theme-volantis": "^4.3.1"
+    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-server": "^2.0.0"
   }
 }
