--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://conjuringwxq.github.io
+root: /
 # permalink: :year/:month/:day/:title/
 permalink: :title/
 permalink_defaults:
