--- a/_config.volantis.yml
+++ b/_config.volantis.yml
@@ -280,19 +280,19 @@ custom_css:
     note: # style for default note: {% note text %}
       icon: '\f054'
       color: ""
-  # fontfamily:
-    # bodyfont:
-    #   fontfamily: "sxls"
-    #   name: "sxls"
-    #   url: https://cdn.jsdelivr.net/gh/conjuringwxq/cdn-fonts@0.0.2/sxls.otf
-    #   weight: normal
-    #   style: normal
-    # codefont:
-    #   fontfamily: "Monaco"
-    #   name: "Monaco"
-    #   url: https://cdn.jsdelivr.net/gh/conjuringwxq/cdn-fonts@0.0.2/Monaco.ttf
-    #   weight: normal
-    #   style: normal
+  fontfamily:
+    bodyfont:
+      fontfamily: "sxls"
+      name: "sxls"
+      url: https://cdn.jsdelivr.net/gh/conjuringwxq/cdn-fonts@0.0.2/sxls.otf
+      weight: normal
+      style: normal
+    codefont:
+      fontfamily: "Hack"
+      name: "Hack"
+      url: https://cdn.jsdelivr.net/gh/conjuringwxq/cdn-fonts@0.0.2/Hack.ttf
+      weight: normal
+      style: normal
   cursor:
     enable: true
     text: https://cdn.jsdelivr.net/gh/inkss/common@master/cursor/text.png
